# lichensgo

./: .gitignore  .pre-commit-config.yaml  README.md  data_lichengo.csv  pyproject.toml  requirements.txt
.github/workflows/: d4g-utils.yml
Dashboards/: Documentation_DB.md  charts.py  constants.py  dashboard.py  datasets.py  demo_dash.py  demo_streamlit.py  download.py  gauge_charts.py  map_dash.py  model.py  test.py
Dashboards/assets/: lichen_img.csv  lichen_species_ecology.csv  styles.css
Dashboards/my_data/: computed_datasets.py  data_download.py  datasets.py  db_connect.py  model.py  requests.sql  sql_stuff.sql
Dashboards/notebooks/: exploratory_data_analysis.ipynb  plots.ipynb
Dashboards/tests/: test.py
Dashboards/utils/: colors.py  css_reader.py  lichen_info.py
Dashboards/visualisation/: dash_hist4.py  dash_hist4_pxbar.py  gauge_charts.py  hist3.py  histo3_pxbar.py  histo4_pxbar.py  histo4_pxbar_v2.py  histo4_pxhist_v1.py
d4g-utils/: install_poetry.sh
dashboard/: app.py  charts.py  constants.py  datasets.py  datasets_computed.py  datasets_django.py  models.py  plotly_app.py  plotly_app_download.py  translation.py
dashboard/assets/: lichen_species_ecology.csv
dashboard/assets/locale/: en.json  fr.json
dashboard/data/: lichen_species_ecology.csv
dashboard/locale/: en.json  fr.json
dashboard/utils/: location.py  translations.py
data/: d4g.csv
my_data/: computed_datasets.py  datasets.py  db_connect.py  model.py
notebooks/: plots.ipynb
visualisation/: dash_hist4_pxbar.py  gauge_charts.py  hist3_pxbar.py  hist4_pxbar.py
